# sample-autonomous-cloud-coding-agents

./: .gitallowed  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .projenrc.ts  AGENTS.md  CONTRIBUTING.md  PHASE_1A_IMPLEMENTATION_PROMPT.md  README.md  RESEARCH_PROMPT.md  mise.toml  package.json
.claude/: settings.json
.cursor/rules/: agent-runtime.mdc  cdk-handlers.mdc  cli-package.mdc  docs-sources.mdc
.github/: CODEOWNERS  SECURITY.md  pull_request_template.md  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  rfc.yml
.github/workflows/: build.yml  docs.yml  pull-request-lint.yml
.projen/: files.json
.threat-composer/20260331-1834/: threatmodel.tc.json
agent/: Dockerfile  README.md  docker-compose.yml  entrypoint.py  memory.py  mise.toml  pyproject.toml  run.sh
agent/scripts/: create-local-tables.sh
agent/src/: config.py  context.py  entrypoint.py  hooks.py  memory.py  models.py  observability.py  output_scanner.py  pipeline.py  policy.py  post_hooks.py  progress_writer.py  prompt_builder.py  repo.py  runner.py  sanitization.py  server.py  shell.py  system_prompt.py  task_state.py  telemetry.py
agent/src/prompts/: __init__.py  base.py  new_task.py  pr_iteration.py  pr_review.py
agent/tests/: test_config.py  test_entrypoint.py  test_hooks.py  test_memory.py  test_models.py  test_output_scanner.py  test_pipeline.py  test_pipeline_outcomes.py  test_policy.py  test_progress_writer.py  test_prompts.py  test_server.py  test_shell.py
cdk/: header.js  package.json
contracts/: memory-hash-vectors.json
docs/: astro.config.mjs  interactive-agents-architecture.drawio
docs/abca-plugin/: README.md  plugin.json
docs/backlog/: CLI_COGNITO_NEW_PASSWORD_CHALLENGE.md  EARLY_PROGRESS_MILESTONES.md
docs/design/: AGENT_HARNESS.md  API_CONTRACT.md  ARCHITECTURE.md  INPUT_GATEWAY.md  INTERACTIVE_AGENTS.md  MEMORY.md  NETWORK_ARCHITECTURE.md  OBSERVABILITY.md  ORCHESTRATOR.md  REPO_ONBOARDING.md  SECURITY.md
docs/guides/: DEVELOPER_GUIDE.md  ROADMAP.md  USER_GUIDE.md
(+95 files in other folders)
